--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,7 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "regions": ["syd1"],
-  "crons": [
-    {
-      "path": "/api/ping",
-      "schedule": "0 9 * * *"
-    }
-  ],
   "functions": {
-    "api/**/*.php": {
-      "runtime": "vercel-php@0.5.0"
+    "api/*.php": {
+      "runtime": "vercel-php@0.7.3"
     }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    }
-  ]
+  }
 }
