vercel json update

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
   "functions": {
-    "api/login.php": {
+    "api/**/*.php": {
       "runtime": "vercel-php@0.7.3"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    }
+  ]
 }
+
 
